# Health-Monitoring

./: README.md
ai/: .gitignore  data.ipynb  (+4 more)
dev/: CMakeLists.txt  main.c
dev/.cache/clangd/index/: DeNN_1.h.A430B16EF42DF684.idx  _kiss_fft_guts.h.74724D93E6E38C7B.idx  _kiss_fft_guts.h.829A8D3116A95C0D.idx  accelerometer_handler.cpp.4D1081690210C528.idx  accelerometer_handler.h.DB9DA768892E94BE.idx  accelerometer_handler_test.cpp.7296EEDFFC6C43C2.idx  activation_utils.h.80B980B1AD3C4127.idx  activations.cpp.FDEFF971876619ED.idx  activations_test.cpp.9D3811B572C130FF.idx  add.cpp.F25336373660D0DD.idx  add.h.276DB62F519B85D7.idx  add.h.3A49838FC7B292BD.idx  add_test.cpp.D89985D106E3AF05.idx  all_ops_resolver.cpp.6A10A4F98B572558.idx  all_ops_resolver.h.232478D8839E08CF.idx  arg_min_max.cpp.D9A9D435A78DAE4B.idx  arg_min_max.h.4655EBEB7C386283.idx  arg_min_max_test.cpp.D05B6C654043CBBD.idx  arm_avgpool_s8.c.DBADA550EFBD931C.idx  arm_common_tables.h.AB2EF1F700060B3B.idx  arm_concatenation_s8_w.c.6CFEF1CB2A14A905.idx  arm_concatenation_s8_x.c.285322E91A14E019.idx  arm_concatenation_s8_y.c.8C6DC6C698B326DB.idx  arm_concatenation_s8_z.c.FB0F55E81E260036.idx  arm_convolve_1_x_n_s8.c.0A6752F103452A01.idx  arm_convolve_1x1_HWC_q7_fast_nonsquare.c.7EF1C35DCA8AD89C.idx  arm_convolve_1x1_s8_fast.c.F1CD645D6A1C6F23.idx  arm_convolve_HWC_q15_basic.c.1BC14E29B518F6EA.idx  arm_convolve_HWC_q15_fast.c.CC99E18E9D1A491D.idx  arm_convolve_HWC_q15_fast_nonsquare.c.C69C4514ADA62D3E.idx  arm_convolve_HWC_q7_RGB.c.92A53FC1EF7664FA.idx  (+454 more)
dev/src/: DeNN_1.h  hr_spo2.cpp  hr_spo2.hpp  main.cpp
(+34 files in other folders)
